fixed .legal footer alignment issue

--- a/src/hair/hair-style.css
+++ b/src/hair/hair-style.css
@@ -575,7 +575,7 @@ footer li {
   }
 
   .legal {
-    padding-left: 0;
+    padding-left: 20px;
   }
 
   .nav-items li {
